fixed little stress
