# src/app/api/webhooks/line/payment/route.ts
@@ -1,6 +1,8 @@
 import { NextRequest, NextResponse } from "next/server";
 import { adminDb } from "@/lib/firebase-server";
 import { Client } from "@line/bot-sdk";
+import { Payment } from "@/types/request/payment";
+
 
 const lineClient = new Client({
   channelAccessToken: process.env.LINE_CHANNEL_ACCESS_TOKEN!,
@@ -8,7 +10,7 @@ const lineClient = new Client({
 
 export async function POST(req: NextRequest) {
   try {
-    const { userId, userName, paymentTitle, paymentCost, itemLink, paymentMemo, category } =
+    const { userId, userName, paymentTitle, paymentCost, itemLink, paymentMemo, category }: Payment =
       await req.json();
 
     // Firestore
@@ -24,6 +26,7 @@ export async function POST(req: NextRequest) {
       isApproved: false,
     });
     const requestId = docRef.id;
+    console.log("Payment request created with ID:", requestId);
 
     const isValidHttpUrl =
       typeof itemLink === "string" && /^https?:\/\//i.test(itemLink);
